--- a/Embeddings_and_VectorDB/package.json
+++ b/Embeddings_and_VectorDB/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.39.3",
+    "langchain": "^0.1.9",
     "openai": "^4.25.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
