--- a/Mistral/mistral_playground/package.json
+++ b/Mistral/mistral_playground/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "@mistralai/mistralai": "^0.1.3",
+    "langchain": "^0.1.35",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.23.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
