--- a/Mistral/mistral_playground/package.json
+++ b/Mistral/mistral_playground/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@mistralai/mistralai": "^0.1.3",
+    "@supabase/supabase-js": "^2.43.0",
     "langchain": "^0.1.35",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
